<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="very_severely_underweight_16_1" tools:ignore="DuplicateDefinition"><![CDATA[Very Severely Underweight <16.0]]></string>
    <string name="severely_underweight_16_0"><![CDATA[Severely Underweight <16.0]]></string>
    <string name="underweight_16_0"><![CDATA[Underweight <16.0]]></string>
    <string name="normal_16_0"><![CDATA[Normal <16.0]]></string>
    <string name="overweight_16_0"><![CDATA[Overweight <16.0]]></string>
    <string name="obese_class_1_16_0"><![CDATA[obese Class 1 <16.0]]></string>
    <string name="obese_class_2_16_0"><![CDATA[Obese Class 2 <16.0]]></string>
    <string name="obese_class_3_16_0"><![CDATA[Obese Class 3 <16.0]]></string>
    <string name="meal_planner">Meal Planner</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="your_bmi_is">Your Bmi is:</string>
    <string name="very_severely_underweight_16_0"><![CDATA[Very Severely Underweight <16.0]]></string>
    <string name="severely_underweight_16_0_16_9">Severely Underweight 16.0- 16.9</string>
    <string name="underweight_17_0_18_4">Underweight 17.0 - 18.4</string>
    <string name="normal_18_5_24_9">Normal 18.5 - 24.9</string>
    <string name="overweight_25_0_29_9">Overweight 25.0 - 29.9</string>
    <string name="obese_class_1_30_0_34_9">Obese Class 1 - 30.0 - 34.9</string>
    <string name="obese_class_2_25_0_39_9">Obese Class 2 - 25.0 - 39.9</string>
    <string name="obese_class_40_0"><![CDATA[Obese class >40.0]]></string>
    <string name="want_a_diet_or_workout_plan">Want a diet or workout plan??</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="body_mass_index_bmi_is_a_value_derived_from_the_mass_weight_and_height_of_a_person_the_bmi_is_defined_as_the_body_mass_divided_by_the_square_of_the_body_height_and_is_universally_expressed_in_units_of_kg_m2_resulting_from_mass_in_kilograms_and_height_in_metres_n_nthe_bmi_is_a_convenient_rule_of_thumb_used_to_broadly_categorize_a_person_as_underweight_normal_weight_overweight_or_obese_based_on_tissue_mass_muscle_fat_and_bone_and_height_commonly_accepted_bmi_ranges_are_underweight_under_18_5_kg_m2_normal_weight_18_5_to_25_overweight_25_to_30_and_obese_over_30">Body mass index (BMI) is a value derived from the mass (weight) and height of a person. The BMI is defined as the body mass divided by the square of the body height, and is universally expressed in units of kg/m2, resulting from mass in kilograms and height in metres.\n\nThe BMI is a convenient rule of thumb used to broadly categorize a person as underweight, normal weight, overweight, or obese based on tissue mass (muscle, fat, and bone) and height. Commonly accepted BMI ranges are underweight (under 18.5 kg/m2), normal weight (18.5 to 25), overweight (25 to 30), and obese (over 30).</string>
</resources>
